# ssd_sim_revised

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  ex.out
page_config/: page.parameters
samples/: example.ascii  head_sample
src/: ssd_sim.c  ssd_sim.h
src/includes/: CMakeLists.txt  avlTree.c  avlTree.h  initialize.c  initialize.h
src/ssd_stat/: CMakeLists.txt  flash.c  flash.h  pagemap.c  pagemap.h
